--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-server-micro": "2.11.0",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "fs": "^0.0.1-security",
     "graphql": "14.6.0",
     "next": "latest",
     "react": "16.13.1",
