--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.3",
     "fs": "^0.0.1-security",
     "graphql": "14.6.0",
+    "netlify-plugin-cache-nextjs": "^1.5.0",
     "next": "latest",
     "react": "16.13.1",
     "react-dom": "16.13.1",
