--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ package-lock.json
 .env.development.local
 .env.test.local
 .env.production.local
+
+# deploy files
+/out_publish/
+/out_functions/
