--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.9.3",
@@ -16,6 +16,7 @@
     "graphql": "14.6.0",
     "netlify-plugin-cache-nextjs": "^1.5.0",
     "next": "latest",
+    "next-on-netlify": "^2.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "swr": "0.1.18"
