Start styling with MUI

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postbuild": "next-on-netlify"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "apollo-datasource-rest": "^0.9.3",
     "apollo-server-micro": "2.11.0",
     "axios": "^0.19.2",
