--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "netlify-plugin-cache-nextjs": "^1.5.2",
     "next": "^9.5.3",
     "next-on-netlify": "^2.4.0",
+    "next-pwa": "^3.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "swr": "0.1.18"
