--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "algoliasearch": "^4.8.6",
     "apollo-datasource-rest": "^0.9.3",
     "apollo-server-micro": "2.11.0",
     "axios": "^0.19.2",
@@ -21,6 +22,7 @@
     "next-on-netlify": "^2.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-instantsearch-dom": "^6.10.3",
     "swr": "0.1.18"
   },
   "license": "ISC"
